--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   This URL provides access to the backend of the iTurnier II application.
 </p>
 <p>
-  It does not provide its own web pages and descriptions, but is accessed from frontend applications over an API, with REST services to:
+  With the exception of this single page, it does not directly serve any web pages, but is accessed from frontend applications (other web pages or apps) over an API, with REST services to:
   <ul>
     <li>create a contest and participants</li>
     <li>create a draw</li>
